// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListContainer:reducer handles the usersFetchFailure action snapshot 1`] = `
Immutable.Map {
  "users": Immutable.List [
    Immutable.Map {
      "id": "95617189",
      "firstName": "Elfrieda",
      "lastName": "Frank",
      "email": "Ada20@hotmail.com",
    },
    Immutable.Map {
      "id": "95617188",
      "firstName": "Jim",
      "lastName": "Smith",
      "email": "jsmith@mail.com",
    },
  ],
  "error": Object {
    "message": "An error occurred.",
    "type": 1,
  },
  "isLoading": false,
}
`;

exports[`UserListContainer:reducer handles the usersFetchStart action snapshot 1`] = `Object {}`;

exports[`UserListContainer:reducer handles the usersFetchSuccess action snapshot 1`] = `
Immutable.Map {
  "users": Array [
    Object {
      "email": "Ada20@hotmail.com",
      "firstName": "Elfrieda",
      "id": "95617189",
      "lastName": "Frank",
    },
    Object {
      "email": "jsmith@mail.com",
      "firstName": "Jim",
      "id": "95617188",
      "lastName": "Smith",
    },
  ],
  "error": null,
  "isLoading": false,
}
`;
